--- a/mobile-landing/index.html
+++ b/mobile-landing/index.html
@@ -95,6 +95,7 @@
             margin-bottom: 0;
             animation: 0.5s avatar 1;
             -webkit-animation: 0.5s avatar 1;
+            letter-spacing: -2px;
         }
         
         @-webkit-keyframes h1 {
