--- a/mobile-landing/index.html
+++ b/mobile-landing/index.html
@@ -213,6 +213,13 @@
     <h2>Dave McClure</h2>
     <button>Open App</button>
     <p>Start chat with Dave McClure anonymously!</p>
+    
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/mobiledetect.js"></script>
+    
+    <script>
+        alert(mobileAndTabletcheck());
+    </script>
 </body>
 
 </html>
