--- a/mobile-landing/index.html
+++ b/mobile-landing/index.html
@@ -189,7 +189,7 @@
             from {
                 opacity: 0;
                 transform: translate3d(0, 40px, 0);
-                -webkit-transform: translate3d(0, 0, 0);
+                -webkit-transform: translate3d(0, 40px, 0);
             }
             to {
                 opacity: 1;
